--- a/index.html
+++ b/index.html
@@ -393,7 +393,7 @@
         style="background-image: url('https://source.unsplash.com/random/1280x720/?material-design,abstract-gradient');">
         <div class="content-overlay hero-gradient ">
             <div class="logo">
-                <img src="assets/logo.png" alt="ScaleX Co Logo">
+                <img src="logo.png" alt="ScaleX Co Logo">
             </div>
             <h2>Premium Creative Studio</h2>
             <p class="subtitle">Branding • Content Creation • Social Media Design</p>
